fix(page-headers): Remove variabled spacing from detail row blocks (#3420)

--- a/ui/components/page-headers/record-home/_index.scss
+++ b/ui/components/page-headers/record-home/_index.scss
@@ -66,8 +66,8 @@
 */
 
 .slds-page-header__detail-block {
-  padding-right: $var-spacing-horizontal-x-large;
-  padding-left: $var-spacing-horizontal-x-large;
+  padding-right: $spacing-x-large;
+  padding-left: $spacing-x-large;
   max-width: 25%;
 
   &:first-child {
